fix image cut off

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -39,7 +39,6 @@ header{
   position:absolute;
 }
 .desktop_nav{
-    position:absolute;
     width: 100%;
     background-color: #19181A;
     padding-left: 50px;
